@@ -11,8 +11,6 @@ G_BEGIN_DECLS
 GamSubscription     *gam_subscription_new          (const char *path,
 						    int         events,
 						    int         reqno,
-						    const char *filter,
-						    gboolean    recursive,
 						    gboolean    is_dir);
 
 void                 gam_subscription_free         (GamSubscription *sub);
